--- a/css/index.css
+++ b/css/index.css
@@ -1,163 +1,137 @@
-@import url('https://fonts.googleapis.com/css2?family=Creepster&family=Figtree:wght@700&family=Poetsen+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Riot&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body{
-  background-color: #01409F;
-  display: flex;
-  flex-direction: column;
-  color: white;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-}
-.content{
-  min-width: 250px;
-  background-color:#003B93 ;
-  
-  padding: 0.9rem;
-  height: auto;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
- 
-  
-  
-background: #003B93;
+
+
+
+ @import url('https://fonts.googleapis.com/css2?family=Creepster&family=Figtree:wght@700&family=Poetsen+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Riot&display=swap');
+.bg-blue{
+  background: #003B93;
 box-shadow:  5px 5px 10px #002358,
              -5px -5px 10px #0053ce;
-
+  
 }
-
-
+a {
+  text-decoration: none;
+  border: none;
+  outline: none;
+  color: green;
+}
+#set_location{
+  cursor: none;
+  outline: none;
+  width: 80%;
+}
 .zona{
   font-size: 0.7rem;
   font-family: "Poetsen One", sans-serif;
-  font-weight: 400;
 }
 .waktu{
   margin-top: 10px;
   font-family: "Poetsen One", sans-serif;
-  font-weight: 400;
-  color: ;
-  font-size: 0.6rem;
+  font-size: 0.5rem;
 }
-.suhu{
-  font-size:2.9rem;
-  margin: 50px 0 0;
+
+.content{
+  border-radius: 5px;
+}
+#weatherForm{
+  border-radius: 5px;
+}
+#weatherForm button{
+  right: 10px;
+}
+
+.informasi-detail{
+  font-weight: bold;
+  font-size: 0.5rem;
+  box-shadow:  5px 5px 8px #002358,
+             -5px -5px 8px #0053ce;
+}
+.informasi-suhu{
+  
+}
+.informasi-suhu svg{
+  fill: #fff;
+  color: ;
+}
+.suhu-sekarang{
+  font-size: 2rem;
   font-weight: 700;
   font-family: "Protest Riot", sans-serif;
-}
-.cuaca{
-  width: 100%;
-  height:90px ;
-  
-  display: flex;
-  justify-content: center;
-  
-  
-}
-.icon-suhu{
-  height: auto;
-  width: 100px;
-  height: 100%;
-  right: 2%;
-  
-  
 }
 .icon-suhu img{
   width: 100%;
   height: 100%;
+  
+}
+.keterangan-suhu{
+  font-size: 0.8rem;
+  font-family: "Protest Riot", sans-serif;
 }
 .keterangan-cuaca{
-  font-size: 0.6rem;
+  font-size: 0.5rem;
   font-weight: 700;
   margin-top:65px ;
   font-family: "Poetsen One", sans-serif;
   
  
 }
-.content-detail{
-  width: 90%;
-margin-top: 10px;
-  background-color: ;
-  box-shadow:  5px 5px 8px #002358,
-             -5px -5px 8px #0053ce;
-  z-index:;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  border-radius: 8px;
-  padding: 20px 0;
-}
-.content-detail .wind-speed{
-  
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 5px;
-  
-}
-.content-detail .wind-speed p{
-  font-size: 0.5rem;
+.cari{
   color: white;
-  font-family: "Poetsen One", sans-serif;
-  font-weight: 700;
 }
-.content-detail .wind-speed div{
-  font-size: 0.6rem;
-  font-family: "Poetsen One", sans-serif;
-  
+.cari:hover{
+  color: #575ffa;
 }
-.content-detail .wind-speed svg{
-  fill: #fff;
-  
-  text-align: center;
-  
+.loading-animation {
+  width:35px;
+  height: 35px;
+  display:none;
+  border: 2px solid white;
+  margin: 10px;
+  border-radius: 0%;
+  animation-duration: 4s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-name: loading-animationAnimation;
 }
-form{
-  min-width: 250px;
-  background-color:#003B93 ;
-  
-  padding: 0.5rem;
-  height: auto;
-  border-radius: 8px;
-  display: flex;
-  z-index: 99999;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 1rem;
- 
-  gap: 5px;
-  
-background: #003B93;
-box-shadow:  5px 5px 10px #002358,
-             -5px -5px 10px #0053ce;
-}
-form input::placeholder{
-  color: #cdcdcd;
-}
-form input{
-  width: 100%;
-  outline: none;
-  border: none;
-  padding: 2px 3px;
-  border-radius: 4px;
-  background-color: transparent;
-  color: #ffff;
-  font-weight: 700;
-}
-form button{
-  border: none;
-  padding: 5px;
-  border-radius: 100%;
-  color: #ffff;
-  background: transparent;
-  
+
+@keyframes loading-animationAnimation {
+  0% {
+    border-radius: 50% 50% 50% 50%;
+    transform: rotate(0deg);
+  }
+
+  12.5% {
+    border-radius: 0% 50% 50% 50%;
+  }
+
+  25% {
+    border-radius: 0% 0% 50% 50%;
+    transform: rotate(90deg);
+  }
+
+  37.5% {
+    border-radius: 0% 0% 0% 50%;
+  }
+
+  50% {
+    border-radius: 0% 0% 0% 0%;
+    transform: rotate(180deg);
+  }
+
+  62.5% {
+    border-radius: 50% 0% 0% 0%;
+  }
+
+  75% {
+    border-radius: 50% 50% 0% 0%;
+    transform: rotate(270deg);
+  }
+
+  87.5% {
+    border-radius: 50% 50% 50% 0%;
+  }
+
+  100% {
+    border-radius: 50% 50% 50% 50%;
+    transform: rotate(360deg);
+  }
 }
